TEST_PROGRAMS/VALID/07/if_valid.go
package main

func main() {
	if x > max {
		x = max
	}
	if x := f(); x < y {
	return x
}
}

