TEST_PROGRAMS/INVALID/07/invalid_ifexp.go
package main

func main() {
	if x := f(); x := y {
	return x
}
}
